# bricsauthenticator

./: .gitignore  LICENSE  Makefile  README.md  codecov.yml  environment-dev.yml  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: build_lint_test.yml  devcontainer_build_test.yml
src/bricsauthenticator/: __init__.py  auth.py  bricsauthenticator.py  spawner.py  spawner_options_form.py
tests/: check_token.py  test_auth.py  test_entrypoint.py  test_interpret_form_data.py  test_spawner.py  test_spawner_options_form.py  test_version.py
